--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,6 +32,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -e .
         python -m pip install -r ./dev_requirements.txt
+        sudo apt-get update
         sudo apt-get install -y libzbar-dev
     - name: Lint with flake8
       run: |
