--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,11 +22,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Testenv qr code
-      env:
-        V2QRTEST: ${{ secrets.V2TESTQR }}
-      run: |
-        echo $V2TESTQR | base64 -d > test/testdata/qrtest.png
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -41,5 +36,8 @@ jobs:
         # exit-zero treats all errors as warnings.
         flake8 . --count --exit-zero --max-complexity=10 --exclude ./venv --max-line-length=160 --statistics
     - name: Test with pytest
+      env:
+        V2TESTQR: ${{ secrets.V2TESTQR }}
       run: |
+        echo $V2TESTQR | base64 -d > test/testdata/qrtest.png
         pytest
