--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --exclude ./venv --max-line-length=160 --statistics
     - name: Test with pytest
       run: |
-        echo ${{ secrets.V2TESTQR }} | base64 -d > test/testdata/qrtest.png
+        echo "${{ secrets.V2TESTQR }}" | base64 -d > test/testdata/qrtest.png
         md5sum test/testdata/qrtest.png
         pytest
