Added support for rpi A, B, B+, Compute Module, Pi Zero

--- a/verifier/src/Makefile
+++ b/verifier/src/Makefile
@@ -6,6 +6,7 @@ clean:
 
 build:
 	mkdir -p dist
+	env
 	echo BUILDING verifier for ${GOOS}/${GOARCH}
 	go build -buildmode=c-shared -o $$OUTFILE verifier.go || exit 1 
 	@[ "${CHOWNPERMS}" ] && chown $$CHOWNPERMS dist
