--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install OS specific deps
       run:   |
          if [ "$RUNNER_OS" == "Linux" ]; then
-              apt update && apt install libzbar-dev
+              sudo apt update && sudo apt install libzbar-dev
          elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install zbar
          elif [ "$RUNNER_OS" == "macOS" ]; then
