--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,6 +49,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --exclude ./venv --max-line-length=160 --statistics
     - name: Test with pytest
       run: |
-        echo "${{ secrets.V2TESTQR }}" | base64 -d > test/testdata/qrtest.png
-        echo "${{ secrets.V2TESTQRVALID }}" | base64 -d > test/testdata/qrtest2.png
+        echo "${{ secrets.V2TESTQR }}" | python -m base64 -d - > test/testdata/qrtest.png
+        echo "${{ secrets.V2TESTQRVALID }}" | python -m base64 -d - > test/testdata/qrtest2.png
+        
         pytest
