--- a/verifier/src/Makefile
+++ b/verifier/src/Makefile
@@ -4,6 +4,14 @@ SHELL:=/bin/bash
 clean:
 	rm -rf ./dist/*
 
+pibuild:
+	mkdir -p dist
+	env
+	echo BUILDING verifier for ${GOOS}/${GOARCH}
+	go build -buildmode=c-shared -a -v -x -o $$OUTFILE verifier.go || exit 1 
+	@[ "${CHOWNPERMS}" ] && chown $$CHOWNPERMS dist
+	@[ "${CHOWNPERMS}" ] && chown $$CHOWNPERMS dist/*
+
 build:
 	mkdir -p dist
 	env
