--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -61,5 +61,5 @@ jobs:
             echo -n "${{ secrets.V2REVOKEDQR }}" | base64 --decode --ignore-garbage > test/testdata/qrtestrevoked.raw
         fi
 
-        pytest
+        pytest -vv --showlocals --full-trace
       shell: bash
