--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -18,7 +18,8 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+# , macos-latest
+        os: [ubuntu-latest, windows-latest]  
 
     steps:
     - uses: actions/checkout@v2
