--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -19,7 +19,8 @@ jobs:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
 # , macos-latest
-        os: [ubuntu-latest, windows-2019]  
+# , windows-latest
+        os: [ubuntu-latest]  
 
     steps:
     - uses: actions/checkout@v2
