disable automatic pytest
Test QR-codes invalidated and policy changes in NL makes this no longer relevant.

--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -9,8 +9,8 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: '00 7 * * *'
-    - cron: '00 18 * * *'
+#    - cron: '00 7 * * *'
+#    - cron: '00 18 * * *'
 
 jobs:
   test:
